# alfred-pinboard-rs

./: .gitignore  AlfredPinboardRust.alfredworkflow  Cargo.toml  create_alfred_workflow.sh
res/workflow/: info.plist
