[dependencies]
dirs = "1.0"
serde = "1.0"
structopt = "0.2"
log = "0.4"
semver = "0.9"
serde_json = "1.0"
failure = "0.1.5"
if_chain = "0.1.3"
alfred-rs = "0.4"
alfred = "4.0.1"
serde_derive = "1.0"
env_logger = "0.6"

[features]

[package]
version = "v0.9.10"
name = "alfred-pinboard-rs"
authors = [ "Hamid Ghadyani <hamid@hamid.cc>",]

[dependencies.chrono]
version = "0.4"
features = [ "serde",]

[dependencies.rusty-pin]
git = "https://github.com/spamwax/rusty-pin"
branch = "master"
